egonlang-core/res/examples/invalid/block_returning_prefix_expr_negate_string.eg
{ -"test" };

// out: TypeError: mismatched types: expected type `number` but received `string`